--- a/wrestrus90/base_templates/base.html
+++ b/wrestrus90/base_templates/base.html
@@ -13,17 +13,22 @@
 <table class="table-page" border=0 cellpadding="0" cellspacing="0">
 <tr><td valign=top>
 
-{% block mainmenu %}
-		<div class="header">
-			<ul id="mainmenu" class="mainmenu">
-			<li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
-{% for m in menu %}
-	{% if not forloop.last %}<li>{% else %}<li class="last">{% endif %}
-		<a href="{% url m.url_name %}">{{m.title}}</a></li>
+
+{% block mainmenu %} 
+<div class="header">
+	<ul id="mainmenu" class="mainmenu">
+	<li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
+{% for m in mainmenu %} <!-- из шиблоного контекстного процессора -->
+<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
 {% endfor %}
-			</ul>
-			<div class="clear"></div>
-		</div>
+{% if user.is_authenticated %} <!-- user передается из контекстного процессора -->
+		<li class="last"><a href="{% url 'users:profile' %}">{{user.username}}</a> | <a href="{% url 'users:logout' %}">Выйти</a></li>
+{% else %}
+<li class="last"><a href="{% url 'users:login' %}">Войти</a> | <a href="{% url 'users:register' %}">Регистрация</a></li>
+{% endif %}
+	</ul>
+	<div class="clear"></div>
+</div>
 {% endblock mainmenu %}
 
 
